--- a/_posts/2023-03-05-git.md
+++ b/_posts/2023-03-05-git.md
@@ -7,7 +7,7 @@ comments: true
 pwd:위치 경로
 
 ls:list 숨김 제외 파일 보여짐
-
+```bash
 git init: **새로운 Git 저장소(repository)를 생성할 때 사용하는 Git 명령어**
  입니다
 
@@ -17,4 +17,4 @@ git add . :추가
 
 git commit -m :메세지 설정
 
-git push origin master : **origin이라는 remote로 현재 로컬 브랜치중 my-branch라는 것을 push하겠다는 의미** 이다.
+git push origin master : **origin이라는 remote로 현재 로컬 브랜치중 my-branch라는 것을 push하겠다는 의미** 이다.```
