--- a/_posts/2023-03-05-git.md
+++ b/_posts/2023-03-05-git.md
@@ -18,3 +18,13 @@ git add . :추가
 git commit -m :메세지 설정
 
 git push origin master : **origin이라는 remote로 현재 로컬 브랜치중 my-branch라는 것을 push하겠다는 의미** 이다.```
+
+```bash
+git clone 하고 자신의 git hub url 복사 붙혀넣기 자시의하던 파일이 열린다.
+
+리녹스 명령어
+
+cd .. 전으로 돌아가기
+
+cd 위치 경로: 파일 옴기기
+```
