--- a/_posts/2023-03-12-git.md
+++ b/_posts/2023-03-12-git.md
@@ -3,13 +3,106 @@ title: 자바 2교시
 categories: [travel]
 comments: true
 ---
+```bash
+c언어 정리
+변수:데이터(data)를 저장하기 위해 프로그램에 의해 이름을 할당받은 메모리 공간을 의미합니다. C언어에서 숫자 표현에 관련된 변수는 정수형 변수와 실수형 변수로 구분할 수 있습니다. 또다시 정수형 변수는 char형, int형, long형 변수로, 실수형 변수는 float형, double형 변수로 나눌 수 있습니다.
+예시: 이름
+
+ 설명 
+
+ char 
+
+ character: 'a'나 '$'과 같은 데이터를 저장
+
+ int
+
+ integer: 1, -27과 같은 정수 데이터를 저장 (-2,147,463,648 과 2,147,463,647 사이의 데이터) 
+
+ float 
+
+ float: 3.14, -53, 0.0004와 같은 부동소수점 데이터를 저장 
+
+ double 
+
+ double: 상당히 크거나 상당히 작은 부동소수점 데이터를 저장 
+ ```
 
 ```bash
-git clone 하고 자신의 git hub url 복사 붙혀넣기 자시의하던 파일이 열린다.
+타입:변수는 '선언' 합니다.
 
-리녹스 명령어
+변수는 다음과 같은 형태로 선언합니다. (int val : val이라는 이름의 변수를 선언하며 이변수는 int 형으로 데이터를 저장 및 참조 해야한다.
 
-cd .. 전으로 돌아가기
+변수와 상수명의 첫글자는 반드시 영문이며 대문자와 소문자는 구분됩니다. ( int val2(o) int 2val(x) / int val ≠ int VAL )
 
-cd 위치 경로: 파일 옴기기
+int ,float ,if 같은 C언어 예약어는 변수명으로 사용 할 수 없다 ( int if (x) ) 
+
+긴 문장에는 "_" 를 사용해서 알기 쉽게 한다 ( "_"도 문자로 취급한다. )
+
+변수명에는 사용목적에 알맞은 이름을 붙히고 지역변수는 짧은이름 외부변수에는 가능한 긴이름을 쓴다.
+예시:#include <stdio.h>
+
+int main() {
+    short a = -32768;
+    int b = -5;
+    long c = -1000000000;
+    long long d = 10000000000;
+    unsigned int e = 4294967295;
+    char f = a;
+    float g = 3.14;
+    double h = 3.14;
+    long double i = 1.2345678;
+ 
+    return 0;
+}
 ```
+```bash
+조건문:조건문은 주어진 조건식의 결과에 따라 별도의 명령을 수행하도록 제어하는 명령문입니다.
+
+조건문 중에서도 가장 기본이 되는 명령문은 바로 if 문입니다.
+
+예시:#include <stdio.h>
+ 
+int main(void) {
+    int a;
+    scanf("%d",&a);
+    if(a%2==0){
+        printf("짝수");
+    }
+    if(a%2==1){
+        printf("홀수");
+    }
+    return 0;
+}
+```
+```bash
+반복문:반복문이란 프로그램 내에서 똑같은 명령을 일정 횟수만큼 반복하여 수행하도록 제어하는 명령문입니다.
+프로그램이 처리하는 대부분의 코드는 반복적인 형태가 많으므로, 가장 많이 사용되는 제어문 중 하나입니다.
+
+예시:#include<stdio.h>
+ 
+int main(void)
+{
+    // for 반복문 예제1
+    printf("for 반복문 예제1 : ");
+    
+    int i;
+    for (i = 0; i < 10; ++i)
+    {
+        printf("%d ", i);
+    }
+    printf("\n");
+ 
+ 
+    // for 반복문 예제2 
+    printf("for 반복문 예제2 : ");
+ 
+    for (int j = 0; j < 5; ++j)
+    {
+        printf("%d ", j);
+    }
+ 
+    return 0;
+}
+ ```
+
+
