--- a/_posts/2023-04-02-손코딩정리.md
+++ b/_posts/2023-04-02-손코딩정리.md
@@ -3,4 +3,22 @@ title: 2023-04-01 손코딩 정리
 categories: [travel]
 comments: true
 ---
+손코딩
+```bash
+손코딩이란 다른말로 핸드코딩, 날코딩, 하드코딩들이 있다. 손코딩 단어에서 알수있듯이 손코딩은 코딩을 할 때 라이브러리나 다른 앱을 사용하지 않고 오직 손과 종이 펜만으로 첫줄에서 부터 끝줄까지 손으로 종이에 쓰는 방법입니다.  그리고 손 코딩에서는 라이브러리에서 와 다르게 모든 문법이나 형식을 정하지 않고 필요한 부분의 코드만 작성해도 된다 하지만 기본적인 부분의 코드는 작성해주는 편이 좋다. 
+```
+```bash
+public class code {
+    public static void main(String[] args) {
+        int i,j;
+        for(i=0;i<=9; i++)
+            for(j=0;j<=0;i++) {
+                System.out.print(i+"*"+j+"="+ i*j +"\t");
+                if(j % 9 == 0); {
+                    System.out.println("");
+                }
 
+        }
+    }
+}
+```
