--- a/_posts/2023-04-23-배열에러정리.md
+++ b/_posts/2023-04-23-배열에러정리.md
@@ -30,3 +30,41 @@ int [] score {10,20,30,40,50,60,1};
  변경되어 실행시킬수없다 그리고 code를보면 public class 다음에 java 클라스 명이 나와있는데 
  그 전체 클라스명이 아니라 개별 클라스명을 바꾸면 파일이 중첩되어 원본파일이 2개가 생긴다 새롭게 생기 파일은 
  원래 파일 안으로 들어간다 해결 방법은 그 클래스명을 맞추면 고처진다.
+
+ 자바 변수선언및 초기화
+ 변수는 변수를 선언한 후 값 할당해주어야만 사용할 수 있습니다. 경우에 따라 초기화를 하지 않고도 사용할 수 있지만 기본적으로는 변수는 선언과 초기화가 이루어져야 사용할 수 있습니다.
+ ```bash
+ // 변수 선언
+String num;
+
+// 변수 초기화
+num = "Hello World";
+
+// 변수 선언 및 초기화
+String num = "Hi";
+```
+자바의 명명 규칙
+```bash
+변수의 명명 규칙
+1.대소문자가 구분되면 길이의 제한이없다
+
+2.예약어를 사용하면 안된다
+
+3.숫자로시작하면 안된다
+
+4.특수문자는 _와 $만을 사용가능하다
+
+자바클라스생성 명명 규칙 
+1.클래스명은 명사로 한다.
+
+2.여러개의 단어가 섞이는 경우 각 단어의 첫번째 문자는 
+대문자이어야 한다. (CamelCase 라고한다)
+
+이름에 여러단어를 혼합하여 사용한다면 첫 번째 단어는 소문자,
+두 번째 단어부터는 대문자로 시작합니다.
+
+이름을 만들때 숫자를 먼저 입력해도 안된다. 
+
+대소문자 구분이 되기 때문에 같은 뜻의 단어를 사용해도 프로그램에서는 
+서로 다른 것으로 받아들인다.
+```
