--- a/_posts/2023-04-23-자바 2교시.md
+++ b/_posts/2023-04-23-자바 2교시.md
@@ -1,5 +1,45 @@
 ---
-title: 자바 2교시 method와 method를 이용해 
+title: method
 categories: [travel]
 comments: true
 ---
+Method
+자바에서 클래스는 멤버(member)로 속성을 표현하는 필드(field)와 기능을 표현하는 메소드(method)를 가집니다.
+
+그중에서 메소드(method)란 어떠한 특정 작업을 수행하기 위한 명령문의 집합이라 할 수 있습니다.
+
+메소드의 사용 목적
+클래스에서 메소드를 작성하여 사용하는 이유는 중복되는 코드의 반복적인 프로그래밍을 피할 수 있기 때문입니다.
+
+또한, 모듈화로 인해 코드의 가독성도 좋아집니다.
+
+그리고 프로그램에 문제가 발생하거나 기능의 변경이 필요할 때도 손쉽게 유지보수를 할 수 있게 됩니다.
+
+예제
+```bash
+package Method;
+
+public class MethodEample {
+    public static void main(String[] args) {
+        int number1 = 4;
+        int number2 = 14;
+        System.out.println(number1+number2);
+
+        int plusMethodTest = 0;
+        plusMethodTest = plus(100 ,1);
+        System.out.println(plusMethodTest);
+    }
+    //메서드
+    /*
+        메서드 선언방법
+        접든제어자 static 리턴타임 메서드명(paremere1,type paramerter,parameter type parameter2 ....) {
+            //logic
+        }
+     */
+
+    public static int plus(int num1, int num2) {
+        int result = num1 + num2;
+        return result;
+    }
+}
+```
