--- a/_posts/2023-05-08-메소드와이론정리.md
+++ b/_posts/2023-05-08-메소드와이론정리.md
@@ -155,5 +155,5 @@ byte b = (byte)i;
 ```bash
 double d = 3.14;
 int i = (int)d;
-double > int로 더 정밀하기 떄문에 더 정밀 → 덜 정밀로 변환하려면 앞에 덜 정밀한 데이터타입을 적어줘야한다.
+double > int로 더 정밀하기 떄문에 더 정밀 → 덜 정밀로 변환하려면 앞에 덜 정밀한 데이터타입을 적어줘야한다..
 ```
