--- a/_posts/2023-05-08-메소드와이론정리.md
+++ b/_posts/2023-05-08-메소드와이론정리.md
@@ -1,46 +1,8 @@
 ---
-title: Method와 이론정리
+title: Method
 categories: [travel]
 comments: true
 ---
-타입의 형변환
-자바에는 2가지 종류에타입변환이 있다.
-첫번째 - 자동타입변환(묵시적)
-두번째 - 강제타입변환(명시적)
-
-1.자동타입변환
-```bash
-프로그램 실행 도중에 자동으로 탑입 변환 일언난다.
-작은 크기 가지는 타입이 큰크기를 가지는 타입에 저장될때 발생한다.
-큰 크기타입 = 작은 크기타입
-타입별 크기 순서(byte)
-byte(1)<short(2)<int(4)<long(8)<float(4)<double(8)
-
-float은 펴현 범위가 더크기 때문에 더 큰 타입으로 들어간다.
-```
-
-2.강제 타입 변환(Casting)
-```bash
-큰 크기 타입은 작은 타입으로 자동 타입 변환을 할수없다.
-하지만 강제로 int 타입의 1byte 를 잘라서 byte 타입변수에 저장할수있다.
-
-작은 크기타입 = (작은 크기타입)큰 크기 타입
-실수 타입은 정수 타입으로 자동 타입 변환되지 않기 때문에 강제 타입변환을 사용해야 한다.
-소수점 이한 부분은 버려지고 (값손실),정수 부분만 저장된다.
-```
-----------------------------------------------------------------------
-
-조건문 
--특정 조건에 따라서 실행의흐름을 달리해야하는 경우에 사용
--조건문은 주어진 조건에 따라 서로 다른 실행을 할수있는 구문 
--if, else, else if , switch문 등의 명령 키원드를 사용.
-
-If문은 같은경우에는 만약 조건문이 true라면? 조건절 실행.
-else if는 if문의 조건문이 아니라면 else였지만,else에 조건을 하나 달아주는것이다.
-
-switch/case 문은 if 문과 비슷하지만 좀 더 정형화된 조건 판단문이다.
-입력변수의 값과 일치하는 case 입력값(입력값1, 입력값2, ...)이 있다면 해당 case문에 속한 문장들이 실행된다. case문마다 break 라는 문장이 있는데 해당 case문을 실행 한 뒤 switch문을 빠져나가기 위한 것이다. 만약 break 문이 빠져 있다면 그 다음의 case 문이 실행된다.
-----------------------------------------------------------------------
 메소드
 메소드는자바에서 클래ㅐ스는 멤버로 속성을 표현하는 필드와 기능을 표현하는 메소드를 가진다.
 그중에서 메소드란 어떠한 특정 작업을 수행하기위한 명령문의 집함 이라 한다.
@@ -101,59 +63,4 @@ public class MethodEample {
         return result;
     }
 }
-```
-``````````````````````````````````````````````````````````````````````
-
-조건문 예시
-```bash
-package lecture20230319;
-
-public class lecture03 {
-    public static void main(String[] args) {
-        //조건문
-        int number = 4;
-        if (number == 4) {
-            System.out.println("number를 출력"+ number);
-        } else {
-            System.out.println("ㅜㅜㅜㅜ");
-        }
-    }
-}
-```
-----------------------------------------------------------------------
-
-타입의 형변환 예시
-
-묵시적 형변환
-정밀하지않은 자료형에서 정밀한 자료형으로 변환하는 경우
-```bash
-int iNum = 20;
-float fNum = iNum;
-// int와 float 모두 4바이트 이지만 float가 더 정밀하게 데이터를 표현할 수 있다.
-```
-
-연산중의 바이트 크기가 작은 자료중에서 큰자료형으로 자동 변환되는 경우
-```bash
-int i = 20;
-float f = i;
-// float > int 큰 형태이므로 int형태의 변수를 float형태의 변수의 대입하면 자동으로 float형태로 형 변환이 된다.
-
-double d;
-d = f + i;
-// double > float > int 큰 형태이므로 float형태의 변수와, int형태의 변수를 더한 값을 double형태의 변수의 대입하게 되면 자동적으로 double형태로 형 변환이 된다.
-```
-
-명시적 형 변환
-바이트 크기가 큰자료형 이 작은 자료형으로 대입하는 경우
-```bash
-int i = 10;
-byte b = (byte)i;
-// int > byte로 큰 형태이므로 큰 형태에서 작은 형태로 변환을 하려면 앞에 변환되는 형태의 타입을 적어줘야한다.
-```
-
-더 정밀한 자료형에서 덜 정밀한 자료형으로 대입하는 경우
-```bash
-double d = 3.14;
-int i = (int)d;
-double > int로 더 정밀하기 떄문에 더 정밀 → 덜 정밀로 변환하려면 앞에 덜 정밀한 데이터타입을 적어줘야한다..
 ```
