--- a/_posts/2023-03-12-c언어.md
+++ b/_posts/2023-03-12-c언어.md
@@ -25,7 +25,7 @@ c언어 정리
  double 
 
  double: 상당히 크거나 상당히 작은 부동소수점 데이터를 저장 
- ```
+
 
 ```bash
 타입:변수는 '선언' 합니다.
@@ -39,7 +39,10 @@ int ,float ,if 같은 C언어 예약어는 변수명으로 사용 할 수 없다
 긴 문장에는 "_" 를 사용해서 알기 쉽게 한다 ( "_"도 문자로 취급한다. )
 
 변수명에는 사용목적에 알맞은 이름을 붙히고 지역변수는 짧은이름 외부변수에는 가능한 긴이름을 쓴다.
-예시:#include <stdio.h>
+예시:
+```
+```c
+#include <stdio.h>
 
 int main() {
     short a = -32768;
@@ -55,6 +58,7 @@ int main() {
     return 0;
 }
 ```
+
 ```bash
 조건문:조건문은 주어진 조건식의 결과에 따라 별도의 명령을 수행하도록 제어하는 명령문입니다.
 
